--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,13 +1,13 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light" [containerInside]="false">
     <mdb-navbar-brand>
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/">
             <img src="../../../assets/images_data/blogger.png"/>
         </a>
     </mdb-navbar-brand>
     <links>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect href="#">Home</a>
+              <a class="nav-link waves-light" mdbWavesEffect href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect href="blogs/fashion">Fashion</a>
@@ -24,22 +24,22 @@
         </ul>
         <ul class="navbar-nav ml-auto nav-flex-icons">
             <li class="nav-item">
-              <a class="nav-link">
+              <a class="nav-link" href="https://www.instagram.com/flowerfairyofficial/?hl=en" target="_blank">
                <span class="fa fa-instagram fa-2x p-2"></span>
               </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" href="https://www.facebook.com/priyaharidaskotnis/" target="_blank">
                     <span class="fa fa-facebook fa-2x p-2"></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" href="https://www.youtube.com/channel/UCpZjcl9EzcqVJ1CPu48QuBw" target="_blank" >
                     <span class="fa fa-youtube fa-2x p-2" ></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" href="https://twitter.com/flowerfairy1991?lang=en" target="_blank">
                     <span class="fa fa-twitter fa-2x p-2"></span> 
                 </a>
             </li>
