--- a/src/app/admin-panel/adminblogedit/adminblogedit.component.html
+++ b/src/app/admin-panel/adminblogedit/adminblogedit.component.html
@@ -15,7 +15,7 @@
             <option selected value="fashion">Fashion</option>
             <option value="travel">Travel</option>
             <option value="beauty">Beauty</option>
-            <option value="lifestyle">Lifestyle</option>
+            <option value="food">Food</option>
         </select><br/><br/>
         
         <label>Cover Photo *</label>
@@ -35,6 +35,6 @@
             <label for="description">Blog Description *</label>
         </div>
 
-        <input mdbBtn color="primary" value="Add Blog" (click)="addBlog()">
+        <input mdbBtn color="primary" [disabled]="!blogForm.valid" value="Add Blog" (click)="addBlog()">
     </form>
 </div>
