--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -1,35 +1,56 @@
 <div class="row">
     <div class="col-xs-12">
-      <!-- Listener for button New Project -->
-      <button mdbBtn color="success" (click)="onNewProject()">New Blog</button>
+      <button mdbBtn color="success" (click)="onNewProject()">Add New Blog</button>
     </div>
 </div>
 <hr>
-<!-- Section: Blog v.3 -->
 <section class="my-5">
-  <div class="row">
-    <div class="col-lg-5 col-xl-4">
-      <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4 waves-light" mdbWavesEffect>
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" alt="Sample image">
-        <a>
-          <div class="mask rgba-white-slight"></div>
-        </a>
-      </div>
-    </div>
-    <div class="col-lg-7 col-xl-8">
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-      <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
-            quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus
-            et aut officiis debitis cum soluta nobis est eligendi placeat facere aut rerum.</p>
-      <a mdbBtn color="info" mdbWavesEffect>Select</a>
-    </div>
-  </div>
+    <div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
+    <ng-template #ifblock>
+        <div class="spinner-grow text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-secondary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-success" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-danger" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-warning" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-info" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-light" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-dark" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </ng-template>
+    <ng-template #elseblock>
+        <div *ngFor="let post of latestPosts">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+                        <img class="img-fluid" src={{post.coverPhoto}} alt="Sample image">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="font-weight-bold mb-3"><strong>{{post.title}}</strong></h3>
+                    <a mdbBtn color="warning" outline="true" (click)="editBlog(post)" mdbWavesEffect>Edit</a>
+                    <a mdbBtn color="danger" outline="true" (click)="deleteBlog(post)" mdbWavesEffect>Delete</a>
+                </div>  
+            </div><br/>
+        </div>    
+    </ng-template>
 </section>
-<div class="row">
-    <div class="col-xs-12">
-        <app-adminblogdetail>
-        </app-adminblogdetail>
-    </div>
-</div>
   
   
