--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -7,6 +7,7 @@
 <section class="my-5">
     <div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
     <ng-template #ifblock>
+        <h3 class="font-weight-bold mb-3">Loading Blogs</h3>
         <div class="spinner-grow text-primary" role="status">
             <span class="sr-only">Loading...</span>
         </div>
