--- a/src/app/body/instagram-updates/instagram-updates.component.html
+++ b/src/app/body/instagram-updates/instagram-updates.component.html
@@ -1,6 +1,7 @@
 
 <div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
 <ng-template #ifblock>
+        <h3 class="font-weight-bold mb-3">Loading Instagram Updates</h3>
     <div class="spinner-grow text-primary" role="status">
         <span class="sr-only">Loading...</span>
     </div>
