--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -2,6 +2,7 @@
     <div class="col-lg-8 mb-5 mb-lg-0">
         <div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
             <ng-template #ifblock>
+                <h3 class="font-weight-bold mb-3">Loading Latest Blogs</h3>
                 <div class="spinner-grow text-primary" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
