--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -47,7 +47,7 @@
                                 Read more
                             </button>
                         </div>  
-                    </div><br/>
+                    </div><hr>
                 </div>    
             </ng-template>
     </div>
