--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.scss
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.scss
@@ -1,4 +1,8 @@
-md-list.make-scrollable {
-    height: 600px; //Or any other height you wish
-    overflow-y: scroll;
+.my-custom-scrollbar {
+    position: relative;
+    height: 700px;
+    overflow: auto;
+    }
+.table-wrapper-scroll-y {
+    display: block;
 }
