--- a/src/app/blogs/generic-blog-list/generic-blog-list.html
+++ b/src/app/blogs/generic-blog-list/generic-blog-list.html
@@ -15,6 +15,7 @@
     <section class="my-5">
       <div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
       <ng-template #ifblock>
+        <h3 class="font-weight-bold mb-3">Loading {{ categoryName | lowercase }} Blogs</h3>
         <div class="spinner-grow text-primary" role="status">
           <span class="sr-only">Loading...</span>
         </div>
@@ -56,7 +57,7 @@
               <p>{{post.description}}</p>
               <a mdbBtn color="success" outline="true" mdbWavesEffect (click)="navigateToBlogContent(post.$key)">Read more</a>
             </div>
-          </div><br/>
+          </div><br/><hr><br/>
         </div>
       </ng-template>
       </section>
