--- a/src/app/blogs/blog-content/blog-content.component.html
+++ b/src/app/blogs/blog-content/blog-content.component.html
@@ -1,34 +1,64 @@
-<div class="site-cover site-cover-sm same-height overlay single-page" [ngStyle]="{'background-image': getUrl()}">
-    <div class="container">
-      <div class="row same-height justify-content-center">
-        <div class="col-md-12 col-lg-10">
-          <div class="post-entry text-center">
-            <span class="post-category text-white bg-success mb-3">{{post.type}}</span>
-            <h1 class="mb-4"><a href="#">{{post.title}}</a></h1>
-            <div class="post-meta align-items-center text-center">
-              <span>&nbsp;-&nbsp; February 10, 2019</span>
+<div *ngIf="bShowloader; then ifblock; else elseblock"></div> 
+<ng-template #ifblock>
+  <h3 class="font-weight-bold mb-3">Loading Blog Content</h3>
+  <div class="spinner-grow text-primary" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-secondary" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-success" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-danger" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-warning" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-info" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-light" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</ng-template>
+<ng-template #elseblock>
+  <div class="site-cover site-cover-sm same-height overlay single-page" [ngStyle]="{'background-image': getUrl()}">
+      <div class="container">
+        <div class="row same-height justify-content-center">
+          <div class="col-md-12 col-lg-10">
+            <div class="post-entry text-center">
+              <span class="post-category text-white bg-success mb-3">{{post.type}}</span>
+              <h1 class="mb-4"><a href="#">{{post.title}}</a></h1>
+              <div class="post-meta align-items-center text-center">
+                <span>&nbsp;-&nbsp; February 10, 2019</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-</div>
-  
-<section class="site-section py-lg">
-    <div class="container"> 
-      <div class="row blog-entries element-animate">
-        <div class="main-content">
-          <div class="post-content-body">
-            <p>{{post.description}}</p>
-            <div class="col-md-15 mb-4">
-              <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-                  <mdb-carousel-item *ngFor="let data of slides">
-                    <img class="d-block w-100" [src]=data>
-                  </mdb-carousel-item>
-              </mdb-carousel>
-            </div>    
+  </div>
+    
+  <section class="site-section py-lg">
+      <div class="container"> 
+        <div class="row blog-entries element-animate">
+          <div class="main-content">
+            <div class="post-content-body">
+              <p>{{post.description}}</p>
+              <div class="col-md-15 mb-4">
+                <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+                    <mdb-carousel-item *ngFor="let data of slides">
+                      <img class="d-block w-100" [src]=data>
+                    </mdb-carousel-item>
+                </mdb-carousel>
+              </div>    
+            </div>
           </div>
         </div>
       </div>
-    </div>
-</section>
+  </section>
+</ng-template>
