--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -117,11 +117,11 @@ h1, h2, h3, h4, h5,
   .site-footer .border-top {
     border-top: 1px solid rgba(255, 255, 255, 0.1) !important; }
   .site-footer p {
-    color: #737373; }
+    color: #000; }
   .site-footer h2, .site-footer h3, .site-footer h4, .site-footer h5 {
     color: #fff; }
   .site-footer a {
-    color: #999999; }
+    color: #000; }
     .site-footer a:hover {
       color: white; }
   .site-footer ul li {
@@ -129,6 +129,9 @@ h1, h2, h3, h4, h5,
   .site-footer .footer-heading {
     font-size: 16px;
     color: #fff; }
+    .site-footer label{
+      color: #000;
+    }
 
 .bg-text-line {
   display: inline;
