-Added instagram click post click redirect to instagram account.

--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -40,10 +40,10 @@
                             </div>
                         </div>
                         <div class="col-lg-7">
-                            <span class="post-category text-white bg-success mb-3">{{post.type}}</span>
+                            <span class="post-category text-white bg-primary mb-3">{{post.type}}</span>
                             <h3 class="font-weight-bold mb-3"><strong>{{post.title}}</strong></h3>
                             <p>{{post.subtitle}}</p>
-                            <button mdbBtn color="default" outline="true" mdbWavesEffect (click)="navigateToBlogContent(post.$key)">
+                            <button mdbBtn color="primary" outline="true" mdbWavesEffect (click)="navigateToBlogContent(post.$key)">
                                 Read more
                             </button>
                         </div>  
