--- a/src/app/body/instagram-updates/instagram-updates.component.html
+++ b/src/app/body/instagram-updates/instagram-updates.component.html
@@ -32,9 +32,11 @@
         <div class="column" *ngFor="let edges of instaData.graphql.user.edge_owner_to_timeline_media.edges; let index=index">
             <div *ngIf="index < 6; then ifblock"></div>
             <ng-template #ifblock>
-                <div class="card">
-                    <img class="card-body bg-dark" [src]="edges.node.display_url" alt="Snow" style="width:100%;height: 450px;">
-                </div>
+                <a>
+                    <div class="card" (click)="navigateToInstagra()">
+                        <img class="card-body bg-dark" [src]="edges.node.display_url" alt="Snow" style="width:100%;height: 450px;">
+                    </div>
+                </a>
             </ng-template>
         </div>
     </div>    
