-Removed obsolete component. -Added pipe to filter description data. -Used inbuilt pipes for date display.

--- a/src/app/admin-panel/adminblogedit/adminblogedit.component.html
+++ b/src/app/admin-panel/adminblogedit/adminblogedit.component.html
@@ -20,16 +20,20 @@
         </select><br/><br/>
         
         <label>Cover Photo *</label>
-        <button mdbBtn (click)="addCoverPic()" color="default" rounded="true" mdbWavesEffect>Select Cover Pic</button><br/><br/>       
+        <button mdbBtn (click)="addCoverPic()" color="default" mdbWavesEffect>Select Cover Pic</button>
+        <br/><br/>       
         
         <label>Pic 1 *</label>
-        <button mdbBtn (click)="addPic1()" color="default" rounded="true" mdbWavesEffect>Select Pic 1</button><br/><br/> 
+        <button mdbBtn (click)="addPic1()" color="default"  mdbWavesEffect>Select Pic 1</button>
+        <br/><br/> 
 
         <label>Pic 2 *</label>
-        <button mdbBtn (click)="addPic2()" color="default" rounded="true" mdbWavesEffect>Select Pic 2</button><br/><br/> 
+        <button mdbBtn (click)="addPic2()" color="default" mdbWavesEffect>Select Pic 2</button>
+        <br/><br/> 
 
         <label>Pic 3 *</label>
-        <button mdbBtn (click)="addPic3()" color="default" rounded="true" mdbWavesEffect>Select Pic 3</button><br/><br/> 
+        <button mdbBtn (click)="addPic3()" color="default"  mdbWavesEffect>Select Pic 3</button>
+        <br/><br/> 
 
         <div class="md-form md-outline">
             <textarea type="text" id="description" formControlName="description" class="form-control md-textarea" rows="3" mdbInput></textarea>
