--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -55,7 +55,7 @@
                             <a mdbBtn color="warning" outline="true" (click)="editBlog(post)" mdbWavesEffect>Edit</a>
                             <a mdbBtn color="danger" outline="true" (click)="deleteBlog(post)" mdbWavesEffect>Delete</a>
                         </div>  
-                    </div><br/>
+                    </div><hr><br/>
                 </tr>
             </table>
         </div>    
