-Changed Image loading image size -Latest blog fetch logic changed. -Blog content images representation changed. -Admin navigation changed.

--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <div class="col-lg-7">
-                            <h3 class="font-weight-bold mb-3"><strong>{{post.title}}</strong></h3>
+                            <p class="font-weight-bold mb-3"><strong>{{post.title}}</strong></p>
                             <a mdbBtn color="warning" outline="true" (click)="editBlog(post)" mdbWavesEffect>Edit</a>
                             <a mdbBtn color="danger" outline="true" (click)="deleteBlog(post)" mdbWavesEffect>Delete</a>
                         </div>  
